php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #43386 php_array_init_globals calls memset() incorrectly
Submitted: 2007-11-23 06:54 UTC Modified: 2007-11-25 15:57 UTC
From: andy at petdance dot com Assigned:
Status: Closed Package: *General Issues
PHP Version: 5.3CVS-2007-11-23 (CVS) OS: *
Private report: No CVE-ID: None
 [2007-11-23 06:54 UTC] andy at petdance dot com
Description:
------------
This function in ext/standard/array.c is supposed to zero out the contents of array_globals, but will actually only zero out a single pointer's worth of data.

static void php_array_init_globals(zend_array_globals *array_globals)
{
    memset(array_globals, 0, sizeof(array_globals));
}

That should be sizeof(*array_globals).


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-11-25 15:57 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 17 22:00:02 2026 UTC