MFB: Fixed bug #43386 (array_globals not reset to 0 properly on init)